#A050 - try to fix animation on IOS

--- a/custom.css
+++ b/custom.css
@@ -47,6 +47,10 @@
     -ms-transform: translateY(2px);
     -moz-transform: translateY(2px);
     -webkit-transform: translateY(2px);
+    -webkit-transition: -webkit-transform 0.1s ease-out;
+    -moz-transition: transform 0.1s ease-out;
+    -o-transition: transform 0.1s ease-out;
+    transition: transform 0.1s ease-out;
 }
 
 .day .btn-color-green:disabled {
@@ -78,6 +82,10 @@
     -ms-transform: translateY(2px);
     -moz-transform: translateY(2px);
     -webkit-transform: translateY(2px);
+    -webkit-transition: -webkit-transform 0.1s ease-out;
+    -moz-transition: transform 0.1s ease-out;
+    -o-transition: transform 0.1s ease-out;
+    transition: transform 0.1s ease-out;
 }
 
 .night .btn-color-green:disabled {
@@ -756,7 +764,14 @@ button {
 .modal-btn:active {
     box-shadow: 0px 1px 0px 0px rgb(12, 131, 101);
     transform: translateY(2px);
+    -o-transform: translateY(2px);
+    -ms-transform: translateY(2px);
+    -moz-transform: translateY(2px);
     -webkit-transform: translateY(2px);
+    -webkit-transition: -webkit-transform 0.1s ease-out;
+    -moz-transition: transform 0.1s ease-out;
+    -o-transition: transform 0.1s ease-out;
+    transition: transform 0.1s ease-out;
 }
 
 .modal-btn:disabled {
